--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-root"></div>
+    <div id="alert-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
